# iac-snowflake-service_user-rsa_key_pairs_and_jwt_generator-lambda

./: .gitignore  CHANGELOG.md  Dockerfile  Pipfile  README.md  app.py  aws-resources.tf  deploy-locally.sh  deploy.sh  main.tf  provider.tf  pyproject.toml  remove_test_secrets.sh  run-locally.sh  test_app.py  variables.tf
.blog/: what-is-a-rsa-key-pair.md
.github/actions/aws-environment-info/: action.yml
.github/workflows/: deploy.yml  undeploy.yml
scripts/: run-locally.sh  run-terraform-locally.sh
src/: app.py  generate_key_pairs.py
tests/: test_app.py
