[project]
name = "iac-snowflake-user-rsa-key-pairs-generator-lambda"
version = "0.43.01.000"
description = "Use this AWS Lambda function, written in Python, to generate two new RSA key pairs for a specific Snowflake user. After generation, the function automatically stores the RSA key pairs securely in your AWS Secrets Manager. This ensures the keys can be safely retrieved and managed for future use by the Snowflake user."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.38.16",
    "cryptography>=44.0.3",
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
log_file = "test.log"
log_file_level = "INFO"
log_file_format = "%(asctime)s - %(levelname)s - %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = 1
log_cli_level = "INFO"
log_cli_format = "%(asctime)s - %(levelname)s - %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"