[project]
name = "iac-snowflake-user-rsa-key-pairs-generator-lambda"
version = "0.48.00.000"
description = "Use this AWS Lambda function, written in Python, to generate two new RSA key pairs for a specific Snowflake user. After generation, the function automatically stores the RSA key pairs securely in your AWS Secrets Manager. This ensures the keys can be safely retrieved and managed for future use by the Snowflake user."
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "boto3>=1.39.4",
    "cryptography>=45.0.5",
    "dotenv>=0.9.9",
    "pyjwt>=2.10.1",
    "pytest>=8.3.5",
    "requests>=2.32.4",
]

[tool.pytest.ini_options]
log_file = "test.log"
log_file_level = "INFO"
log_file_format = "%(asctime)s - %(levelname)s - %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = 1
log_cli_level = "INFO"
log_cli_format = "%(asctime)s - %(levelname)s - %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
